--- a/playground/docs/layout.jade
+++ b/playground/docs/layout.jade
@@ -11,9 +11,9 @@ block content
   p 
     | Start with this example code and create as many sections as you need with 
     span.atk-label.atk-swatch-lightRed atk-layout-row
-    | . Toolkit's layout covers 100% of available browser space and divides it between layout rows.
+    | . Toolkit's layout element covers 100% of available browser space and divides it between layout rows.
   pre.atk-push-large
-    code.html.atk-padding.atk-shape-rounded
+    code.html.atk-box.atk-box
       = '<div class="atk-layout">'
       br
       = '  <div class="atk-layout-row">'
@@ -41,7 +41,7 @@ block content
     span.atk-label.atk-swatch-lightRed .atk-layout-expand
     |  class to expand one of the layout rows. This comes especially handy when you need to create a sticky footer.
   pre.atk-push-large
-    code.html.atk-padding.atk-shape-rounded
+    code.html.atk-box
       = '<div class="atk-layout">'
       br
       = '  <div class="atk-layout-row">'
@@ -71,7 +71,7 @@ block content
     a(href='responsive') responsive
     | .
   pre.atk-push-large
-    code.html.atk-padding.atk-shape-rounded
+    code.html.atk-box
       = '<div class="atk-layout">'
       br
       = '  <div class="atk-layout-row">'
@@ -108,7 +108,7 @@ block content
   h2 Layout columns
   p Create as many columns as you need with the help of a .atk-layout-column. Same as rows, columns can be expanded with a 'atk-layout-expand' class.
   pre.atk-push-large
-    code.html.atk-padding.atk-shape-rounded
+    code.html.atk-box
       = '<div class="atk-layout">'
       br
       = '  <div class="atk-layout-row">'
@@ -157,7 +157,7 @@ block content
     |  classes with layout columns to align content vertically. Works like a charm when you need to center that 
     a(href='#') login box.
   pre
-    code.html.atk-padding.atk-shape-rounded
+    code.html.atk-box
       = '<div class="atk-layout">'
       br
       = '  <div class="atk-layout-row">'
