Updated icons doc.

--- a/playground/docs/icons.jade
+++ b/playground/docs/icons.jade
@@ -6,5 +6,17 @@ block link
 block content
   h1.atk-push-reset Icons
   hr
-  p.atk-size-kilo  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus dolor suscipit blanditiis architecto eligendi perspiciatis totam ipsa qui reiciendis illo voluptate ea, vero, eum nostrum voluptas, amet dignissimos. Aspernatur, similique.
+  p.atk-size-mega.atk-text-light.atk-push-large  Agile Toolkit CSS by default comes with a FontAwesome 500+ icon library. Icons are scalable, can be any size or color. 
+  //- h2 Testing
+  //- p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic velit, animi incidunt modi asperiores? Dolores explicabo, quasi in soluta numquam, vel enim veniam voluptates et doloremque cum animi commodi asperiores.
   include ../includes/fontello
+  h2 Changing iconset
+  p Agile Toolkit CSS is integrated with fontello. Fontello is a tool to quickly pack vector images into webfonts.
+  ol
+    li Go to fontello.com.
+    li Click on the wrench and import config.json (found in /font/ folder).
+    li Drag and drop your .svg vector files or pick any icons from fontello's existing iconsets.
+    li Download and unpack.
+    li Replace theme's /font/ folder and /css/fontello.css file with the new ones.
+    li Make sure you save config.json file somewhere for the next imports.
+    li Recompile theme-default.less file.
