rename theme.less into playground-theme.less, cleanups

--- a/playground/docs/icons.jade
+++ b/playground/docs/icons.jade
@@ -6,7 +6,7 @@ block link
 block content
   h1.atk-push-reset Icons
   hr
-  p.atk-size-mega.atk-text-light.atk-push-large  Agile Toolkit CSS by default comes with a FontAwesome 500+ icon library. Icons are scalable, can be any size or color. 
+  p.atk-size-mega.atk-text-light.atk-push-large  Agile CSS by default comes with a FontAwesome 500+ icon library. Icons are scalable, can be any size or color.
   //- h2 Testing
   //- p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic velit, animi incidunt modi asperiores? Dolores explicabo, quasi in soluta numquam, vel enim veniam voluptates et doloremque cum animi commodi asperiores.
   include ../includes/fontello
