--- a/playground/docs/layout.jade
+++ b/playground/docs/layout.jade
@@ -6,10 +6,12 @@ block link
 block content
   h1.atk-push-reset Layout
   hr
-  p.atk-size-mega.atk-text-light.atk-push-large Agile Toolkit CSS allows you to create any desirable page layouts without major changes in a page structure.
+  p.atk-size-mega.atk-text-light.atk-push-large
+    | Agile CSS allows you to create a wide varietty of page layouts by combining
+    | without major changes in a page structure.
   h2 Basic layout
-  p 
-    | Start with this example code and create as many sections as you need with 
+  p
+    | Start with this example code and create as many sections as you need with
     span.atk-label.atk-swatch-lightRed atk-layout-row
     | . Toolkit's layout element covers 100% of available browser space and divides it between layout rows.
   pre.atk-push-large
@@ -36,8 +38,8 @@ block content
       br
       = '</div>'
   h2 Layout expander
-  p 
-    | Add a  
+  p
+    | Add a
     span.atk-label.atk-swatch-lightRed .atk-layout-expand
     |  class to expand one of the layout rows. This comes especially handy when you need to create a sticky footer.
   pre.atk-push-large
@@ -65,9 +67,9 @@ block content
       = '</div>'
   h2 Wrappers
   p
-    | Use 
+    | Use
     span.atk-label.atk-swatch-lightRed .atk-wrapper
-    |  to keep your content centered and 
+    |  to keep your content centered and
     a(href='responsive') responsive
     | .
   pre.atk-push-large
@@ -152,9 +154,9 @@ block content
       = '</div>'
   h2 Vertical alignment of content
   p
-    | Combine 
+    | Combine
     span.atk-label.atk-swatch-lightRed .atk-valign-*
-    |  classes with layout columns to align content vertically. Works like a charm when you need to center that 
+    |  classes with layout columns to align content vertically. Works like a charm when you need to center that
     a(href='#') login box.
   pre
     code.html.atk-box
