--- a/playground/includes/header.jade
+++ b/playground/includes/header.jade
@@ -4,7 +4,7 @@
       .atk-bar.atk-cells.atk-cells-gutter
         .atk-cell
           a.atk-size-mega(href='/')
-            strong AgileToolkit
+            strong Agile
             | &nbsp;
             span.atk-label.atk-swatch-yellow CSS
         .atk-cell.atk-jackscrew
@@ -12,7 +12,7 @@
             li
               a.atk-swatch-ink.atk-padding(href='index.html') Playground
             li
-              a.atk-swatch-ink.atk-padding(href='icons.html') Icons
+              a.atk-swatch-ink.atk-padding(href='docs/icons.html') Icons
             li
               a.atk-swatch-ink.atk-padding(href='layouts.html') Layouts
             li
