--- a/playground/includes/sidebar.jade
+++ b/playground/includes/sidebar.jade
@@ -6,7 +6,7 @@ block link
 
 aside.atk-layout-column#sidebar
   nav.atk-swatch-ink.scrollable
-    a(href='splash.html').atk-text-bold.atk-text-lead.atk-padding.atk-inline AgileToolkit CSS
+    a(href='splash.html').atk-text-bold.atk-text-lead.atk-padding.atk-inline Agile CSS
     hr.atk-hr-reset.atk-push-xsmall
     ul.atk-list-nobullets.atk-menu-vertical.atk-push-xsmall
       each val, key in menu
