--- a/playground/includes/head.jade
+++ b/playground/includes/head.jade
@@ -5,5 +5,5 @@ head
   <!--<![endif]-->
   title Agile Toolkit CSS
   meta(name='description', content='')
-  link(rel='stylesheet', href='css/theme.css')
+  link(rel='stylesheet', href='css/playground-theme.css')
   script(src='../js/atk-helpers-min.js')
