cleanup and refactored text on layouts

--- a/playground/includes/head-docs.jade
+++ b/playground/includes/head-docs.jade
@@ -7,4 +7,4 @@ head
   meta(name='description', content='')
   //- link(href='http://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600,700', rel='stylesheet', type='text/css')
   link(href='http://fonts.googleapis.com/css?family=Droid+Sans+Mono', rel='stylesheet', type='text/css')
-  link(rel='stylesheet', href='../css/theme.css')
+  link(rel='stylesheet', href='../css/playground-theme.css')
