--- a/playground/includes/sidebar.jade
+++ b/playground/includes/sidebar.jade
@@ -18,6 +18,6 @@ aside.atk-layout-column#sidebar
     hr.atk-hr-reset.atk-push-xsmall
     ul.atk-list-nobullets.atk-menu-vertical
       li
-        a(href="/index.html").atk-swatch-ink.atk-padding.atk-section-xsmall Playground
+        a(href="../index.html").atk-swatch-ink.atk-padding.atk-section-xsmall Playground
       li
-        a(href="/examples.html").atk-swatch-ink.atk-padding.atk-section-xsmall Examples
+        a(href="#").atk-swatch-ink.atk-padding.atk-section-xsmall Examples
